Bandage fix mobile view to be readable.
Need to refactor to make it more responsive.

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -16,6 +16,12 @@ footer{
         margin-top: -20vh;
         max-height: none;
     }
+
+
+    @media screen and (orientation:landscape) and (max-width: 1024px) {
+        height: 30vh;
+    }
+
     .leftPanel{
         text-align: center;
         font-family: $font-Segoe;
