--- a/css/_global.scss
+++ b/css/_global.scss
@@ -18,6 +18,16 @@ body{
         max-height: 100vh;
         height: 100vh;
 
+        @media screen and (orientation:landscape) and (max-width: 1024px){
+            height: 175vh;
+            max-height: 175vh;
+        }
+
+        @media screen and (orientation:landscape) and (max-height: 300px){
+            height: 225vh;
+            max-height: 225vh;
+        }
+
         &:nth-of-type(odd) {
             background-color:$light-cyan;
         }
